Cambiar texto de email de regisitración. Close #2

--- a/source/templates/welcome-email.jade
+++ b/source/templates/welcome-email.jade
@@ -1,4 +1,5 @@
 p #{t('templates.email.greeting')}
 p !{t('templates.welcome-email.body')}
+p !{t('templates.welcome-email.body2')}
 p #{t('templates.email.signature')}
 p #{t('templates.welcome-email.ps')}
